--- a/backend/ToDO/index.html
+++ b/backend/ToDO/index.html
@@ -19,7 +19,7 @@
     First ToDO APP
   </title>
 
-</head>
+<link rel="stylesheet" href="styles.042dfb173ed0d1511518.css"></head>
 
 <body>
   <app-root></app-root>
@@ -37,6 +37,6 @@
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="./assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
 
-</body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.8d84453a9c1f9c6a4792.js"></script></body>
 
 </html>
